# s2t_p2w

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLEANUP_SPEC.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  install.sh  pyproject.toml  requirements.txt  test_stt.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: create_icon.py
docs/: TODO-mistral-stt.md
scripts/: dicton.service  install.sh  p2w.service
src/: config.py  keyboard_handler.py  main.py  speech_recognition_engine.py  ui_feedback.py  visualizer.py  visualizer_vispy.py
src/dicton/: config.py  config_server.py  context_detector_wayland.py  context_profiles.py  fn_key_handler.py  keyboard_handler.py  latency_tracker.py  llm_processor.py  main.py  selection_handler.py  speech_recognition_engine.py  streaming_audio.py  stt_elevenlabs.py  stt_factory.py  stt_gladia.py  stt_mistral.py  stt_provider.py  text_processor.py  ui_feedback.py  update_checker.py  visualizer.py  visualizer_gtk.py
tests/: __init__.py  conftest.py  test_config.py  test_context_detector.py  test_fn_key_hotplug.py  test_hotkey.py  test_llm_processor.py  test_platform.py  test_speech_recognizer_integration.py  test_stt_elevenlabs.py  test_stt_factory.py  test_stt_integration.py  test_stt_mistral.py  test_stt_provider.py
